--- a/src/App.css
+++ b/src/App.css
@@ -19,10 +19,6 @@
   color: white;
 }
 
-.card {
-  padding: 15px;
-}
-
 .caseDetails{
   max-width: 25%;
   margin: 0 auto;
@@ -33,4 +29,18 @@ li {
   list-style-type: none;
   text-align: center;
 
+}
+
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  margin: 0 auto;
+  max-width: 25% ;
+  text-align: center;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
