--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   text-align: center;
 }
 
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -31,12 +33,26 @@ li {
 
 }
 
+.header{
+  background-color: #4CAF50;
+  color: white;
+  height: 80px;
+  margin-bottom: 20px;
+}
+
+
+
 .card {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   margin: 0 auto;
-  max-width: 25% ;
+  margin-bottom: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-top: 10px;
+  max-width: 50% ;
   text-align: center;
 }
 
@@ -44,3 +60,72 @@ li {
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
+
+.pagination {
+  display: inline-block;
+}
+
+h2, h4 {
+  font-family: 'Press Start 2P', cursive;
+  margin:0;
+  padding-top: 30px;
+}
+
+h4{
+  padding: 10px;
+}
+
+.flavourText{
+  padding: 10px;
+  margin: 10px;
+}
+
+.crudButtons{
+  padding: 10px;
+  margin: 0 auto;
+}
+
+button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 10px 20px 10px 20px;
+  margin: 0px 5px 0px 5px;
+  border-radius: 5px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  
+}
+
+button:hover {
+  background-color: white;
+  color: #4CAF50;
+}
+
+.formButton {
+  margin-top: 40px;
+}
+
+ul.pagination {
+  display: inline-block;
+  padding: 0;
+  margin: 10px;
+}
+
+ul.pagination li {display: inline;}
+
+ul.pagination li {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+ul.pagination li a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+ul.pagination li a:hover:not(.active) {background-color: #ddd;}
